[package]
name = "geode"
version = "0.1.0"
edition = "2021"

[dependencies]
compost = { git = "https://github.com/Radbuglet/compost.git", rev = "6b029d6b4530b92b2e8b343f07069624da5541d1" }
derive-where = "1.0.0"
fastrand = "1.8.0"
fnv = "1.0.3"
hibitset = "0.6.3"
log = "0.4.17"
parking_lot = "0.12.1"

[dev-dependencies]
env_logger = "0.10.0"
